feat: add 'experiences' checkboxes

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     </div>
     <div id="main">
         <div id="header">
-            You know you need something like this in your life to help you realize your deepest dreams! Sign up to get started.
+            <div>Your dream getaway is closer than you think.</div>
+            <div>Sign up to discover it.</div>
         </div>
 
         <div id="form-box">
@@ -82,37 +83,49 @@
                     </div>
                 </fieldset>
         
-                <!-- <fieldset id="subjective-data">
-                    <legend>Testing here</legend>
+                <fieldset id="subjective-data">
+                    <legend>
+                        <span>Choose some experiences that inspire you</span>
+                        <img src="./assets/icons/help-icon.svg" alt="Help Icon" title="This will help us match you with the perfect trip">
+                    </legend>
                     <div>
-                        <label for="foobar" class="checkbox">
-                            <input id="foobar" type="checkbox" name="checkbox" value="----">
-                            <span>Checkbox label text</span>
+                        <label for="beach-relax" class="checkbox">
+                            <input id="beach-relax" type="checkbox" name="experiences" value="beach-relax">
+                            <span>Beach & Relaxation</span>
                         </label>
-                        <label for="foobar" class="checkbox">
-                            <input id="foobar" type="checkbox" name="checkbox" value="----">
-                            <span>Checkbox label text</span>
+                        <label for="city-culture" class="checkbox">
+                            <input id="city-culture" type="checkbox" name="experiences" value="city-culture">
+                            <span>City Exploration & Culture</span>
                         </label>
-                        <label for="foobar" class="checkbox">
-                            <input id="foobar" type="checkbox" name="checkbox" value="----">
-                            <span>Checkbox label text</span>
+                        <label for="food-culinary" class="checkbox">
+                            <input id="food-culinary" type="checkbox" name="experiences" value="food-culinary">
+                            <span>Food & Culinary Experiences</span>
+                        </label>
+                        <label for="welness-spa" class="checkbox">
+                            <input id="welness-spa" type="checkbox" name="experiences" value="welness-spa">
+                            <span>Wellness & Spa Retreats</span>
                         </label>
                     </div>
                     <div>
-                        <label for="foobar" class="checkbox">
-                            <input id="foobar" type="checkbox" name="checkbox" value="----">
-                            <span>Checkbox label text</span>
+                        <label for="landmarks-heritage" class="checkbox">
+                            <input id="landmarks-heritage" type="checkbox" name="experiences" value="landmarks-heritage">
+                            <span>Historical Landmarks & Heritage</span>
                         </label>
-                        <label for="foobar" class="checkbox">
-                            <input id="foobar" type="checkbox" name="checkbox" value="----">
-                            <span>Checkbox label text</span>
+                        <label for="festivals-nightlife" class="checkbox">
+                            <input id="festivals-nightlife" type="checkbox" name="experiences" value="festivals-nightlife">
+                            <span>Festivals & Nightlife</span>
                         </label>
-                        <label for="foobar" class="checkbox">
-                            <input id="foobar" type="checkbox" name="checkbox" value="----">
-                            <span>Checkbox label text</span>
+                        <label for="resorts-stays" class="checkbox">
+                            <input id="resorts-stays" type="checkbox" name="experiences" value="resorts-stays">
+                            <span>Luxury Resorts & Premium Stays</span>
+                        </label>
+                        <label for="cruises-boat" class="checkbox">
+                            <input id="cruises-boat" type="checkbox" name="experiences" value="cruises-boat">
+                            <span>Cruises & Boat Tours</span>
                         </label>
                     </div>
-                </fieldset> -->
+
+                </fieldset>
             </form>
         </div>
 
