feat: add style to checkboxes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <fieldset id="subjective-data">
                     <legend>
                         <span>Choose some experiences that inspire you</span>
-                        <img src="./assets/icons/help-icon.svg" alt="Help Icon" title="This will help us match you with the perfect trip">
+                        <img src="./assets/icons/help-icon.svg" alt="Help Icon" title="This will help us match you with the perfect trips">
                     </legend>
                     <div>
                         <label for="beach-relax" class="checkbox">
