feat: update header layout
- New header text
- Header is now at the form box
- Added credits for the sidebar background image

--- a/index.html
+++ b/index.html
@@ -9,23 +9,22 @@
 </head>
 <body>
     <div id="sidebar">
-        <div class="logo-area">
-            <img src="./assets/icons/tropical-trips-logo.svg" alt="Tropical Trips Logo">
-            <div class="text">tropical trips</div>
+        <div>
+            <div class="logo-area">
+                <img src="./assets/icons/tropical-trips-logo.svg" alt="Tropical Trips Logo">
+                <div class="text">tropical trips</div>
+            </div>
         </div>
         <div class="attributions">
-            <!-- Photo by Cams Unltd: https://www.pexels.com/photo/linear-green-leaf-plant-2563854/ -->
-            <!-- from Pexels -->
+            <span>Photo by <a href="https://www.pexels.com/photo/linear-green-leaf-plant-2563854/">Cams Unltd</a> on Pexels</span>
         </div>
     </div>
     <div id="main">
-        <div id="header">
-            <div>Your dream getaway is closer than you think.</div>
-            <div>Sign up to discover it.</div>
-        </div>
-
         <div id="form-box">
-            <h3 class="title">New Account</h3>
+            <div class="title">
+                <div>Your dream getaway is closer than you think.</div>
+                <div>Sign up to discover it.</div>
+            </div>
             <div class="info">
                 Required fields are followed by <span aria-label="required">*</span>
             </div>
