fix: solve window resizing troubles
- Layout does not break anymore when resizing the window
- Wrapping and font scale tweaks

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
             <div class="logo-area">
                 <img src="./assets/icons/tropical-trips-logo.svg" alt="Tropical Trips Logo">
-                <div class="text">tropical trips</div>
+                <d class="text">tropical trips</d>
             </div>
         </div>
         <div class="attributions">
